clients/ui/manifests/frontend/overlays/istio/destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model-registry-ui
  namespace: kubeflow
spec:
  host: model-registry-ui-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
