clients/ui/manifests/frontend/overlays/istio/authorization-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: model-registry-ui
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
    - {}
  selector:
    matchLabels:
      app: model-registry-ui
